cli/lfc/src/test/resources/org/lflang/cli/issue490.stderr
lfc: error: Name of main reactor must match the file name (or be omitted).
--> cli/lfc/src/test/resources/org/lflang/cli/issue490.lf:4:14
  |
3 | target Python;
4 | main reactor R(p(3)) {
  |              ^ Name of main reactor must match the file name (or be omitted).
  |
5 |   state liss(2, 3);
lfc: error: The Python target does not support reaction declarations. Please specify a reaction body.
--> cli/lfc/src/test/resources/org/lflang/cli/issue490.lf:6:3
  |
5 |   state liss(2, 3);
6 |   reaction (startup) {
  |   ^^^^^^^^^^^^^^^^^^^^ The Python target does not support reaction declarations. Please specify a reaction body.
  |
7 |     print(self.liss)
lfc: error: no viable alternative at input '{'
--> cli/lfc/src/test/resources/org/lflang/cli/issue490.lf:6:22
  |
5 |   state liss(2, 3);
6 |   reaction (startup) {
  |                      ^ no viable alternative at input '{'
  |
7 |     print(self.liss)
lfc: error: no viable alternative at input '('
--> cli/lfc/src/test/resources/org/lflang/cli/issue490.lf:7:5
  |
6 |   reaction (startup) {
7 |     print(self.liss)
  |     ^^^^^ no viable alternative at input '('
  |
8 | }
